--- a/ux-shells.css
+++ b/ux-shells.css
@@ -114,11 +114,11 @@
 	            background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
 	            transition: background 0.3s ease 0s; }
 			.panel-shell > section:first-of-type ul li:first-child {
-				width: 100vw;	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1); }
+				width: 100%;	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1); }
 	 		.panel-shell section > ul li.active {
 				box-shadow: none; }
 			.panel-shell section > ul li a {
-				padding: 2vw 0; }
+				padding: 2vw 0;}
 	        .panel-shell section > ul li.active a:before {
 	        	content: '';
 				position: absolute;
